# blacksmith

./: .gitignore  CMakeLists.txt  LICENSE_HEADER  README.md  add_license.sh  blacksmith.cpp  config_sample.json  create_super_pages.sh  pyproject.toml  setup.py  test_config.json  utils.h
config/: coffee-lake_i7-8700K_dual-rank.json  coffee-lake_i7-8700K_single-rank.json  esprimo-d757_i5-6400_gskill-F4-2133C15-16GIS.json
docker/: Dockerfile
include/: Blacksmith.hpp  GlobalDefines.hpp
include/Forges/: FuzzyHammerer.hpp  ReplayingHammerer.hpp  TraditionalHammerer.hpp
include/Fuzzer/: Aggressor.hpp  AggressorAccessPattern.hpp  BitFlip.hpp  CodeJitter.hpp  FuzzingParameterSet.hpp  HammeringPattern.hpp  PatternAddressMapper.hpp  PatternBuilder.hpp
include/Memory/: DRAMAddr.hpp  DramAnalyzer.hpp  Memory.hpp
include/Utilities/: AsmPrimitives.hpp  BlacksmithConfig.hpp  Enums.hpp  Logger.hpp  Range.hpp  TimeHelper.hpp  Uuid.hpp
src/: Bindings.cpp  Blacksmith.cpp  CheckAddrFunction.cpp  DetermineActsPerRef.cpp  DetermineConflictThresh.cpp
src/Forges/: FuzzyHammerer.cpp  ReplayingHammerer.cpp  TraditionalHammerer.cpp
src/Fuzzer/: Aggressor.cpp  AggressorAccessPattern.cpp  BitFlip.cpp  CodeJitter.cpp  FuzzingParameterSet.cpp  HammeringPattern.cpp  PatternAddressMapper.cpp  PatternBuilder.cpp
src/Memory/: DRAMAddr.cpp  DramAnalyzer.cpp  Memory.cpp
src/Utilities/: BlacksmithConfig.cpp  Enums.cpp  Logger.cpp
tools/: analyze_access_timings.py  analyze_acts_per_ref.py  visualize_acts_per_ref.py
